fixed issue #24: bad readability of offcanvas title

--- a/frontend/_public/src/less/_modules/off-canvas.less
+++ b/frontend/_public/src/less/_modules/off-canvas.less
@@ -12,10 +12,15 @@
 		.entry--close-off-canvas,
         .filter--close-btn {
 			background-color: @brand-secondary-light;
+            color: @text-color-light;
 			.background-gardient(rgba(0,0,0,0), rgba(0,0,0,0.1));
 			border-bottom: 1px solid @border-color-light;
             display: block;
             text-align: left;
+            
+            .navigation--link {
+                color: @text-color-light;
+            }
 		}
         
         .navigation--headline {
